modify some bugs
graph reference in node_state;
shortest path

--- a/document/design.tex
+++ b/document/design.tex
@@ -13,6 +13,8 @@
 \newpage
 \section{Introduction}
 We present a generic graph library for C++. With this library, user can manage graph structures much more efficiently. Furthermore, our library is easy to use and extend for C++ developers.
+\section{Assumption}
+
 \section {Node}
 User can define the node type they want to use. In most senarios, a node belongs to a graph. Therefore, in our design, a node is created by declare the graph it belongs to and its information. We use an unique identifier for each node in specific graph. After user call function insert\_node, the function will return back this unique identifier. Afterwards, this handle is used to access the correspoding node.
 
